appId: com.android.vending
---
- assertVisible: "Google Photos"
- assertVisible: "Google LLC"
- tapOn: "Install"
